# ajedrez

./: README.es.md  README.md  docker-compose.yml
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/src/: main.cpp
backend/src/engine/: Attacks.cpp  Attacks.h  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  Game.cpp  Game.h  MoveGen.cpp  MoveGen.h  Piece.h  Search.cpp  Search.h
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  BoardEditor.tsx  ChessClock.tsx  Chessboard.tsx  ControlView.tsx  index.css  main.tsx
